--- a/1. Source/AE_PWC - LIVE/Add-ons/Master Data Synchronization/AE_PWC_AO03/AE_PWC_AO03.vbproj
+++ b/1. Source/AE_PWC - LIVE/Add-ons/Master Data Synchronization/AE_PWC_AO03/AE_PWC_AO03.vbproj
@@ -72,6 +72,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="XamlBuildTask" />
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
